modules/vpc/vpc.tf
resource "google_compute_network" "vpc_network" {
  name                    = var.vpc_name
  auto_create_subnetworks = false
  project                 = var.project_id
  description             = "Custom VPC Network"
}

resource "google_compute_subnetwork" "subnet" {
  name          = var.subnet_name
  ip_cidr_range = var.subnet_ip_cidr
  region        = var.region
  network       = google_compute_network.vpc_network.id
  project       = var.project_id
  description   = "Custom Subnet inside ${var.vpc_name}"
}
